unpackaged/main/default/objects/Billing__c/fields/Additional_Invoice_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Additional_Invoice_Recipients__c</fullName>
    <label>Additional Invoice Recipients</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>