unpackaged/main/default/objects/Billing__c/fields/Additional_Report_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Additional_Report_Recipients__c</fullName>
    <label>Additional Report Recipients</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>