unpackaged/main/default/objects/Billing__c/fields/Business_Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_ID_Number__c</fullName>
    <label>Business Tax-ID Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>