unpackaged/main/default/objects/Billing__c/fields/Client_Info_Validated__c.field-meta.xml
<CustomField>
    <fullName>Client_Info_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Info Validated</label>
    <type>Checkbox</type>
</CustomField>