unpackaged/main/default/objects/Billing__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <label>Client Name</label>
    <length>41</length>
    <type>Text</type>
</CustomField>