unpackaged/main/default/objects/Billing__c/fields/Client_No_Longer_Active__c.field-meta.xml
<CustomField>
    <fullName>Client_No_Longer_Active__c</fullName>
    <formula>Contract__r.Client_No_Longer_Active__c</formula>
    <label>Client No Longer Active</label>
    <type>Checkbox</type>
</CustomField>