unpackaged/main/default/objects/Billing__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <formula>TEXT(Contract__r.Contract_Type__c)</formula>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>