unpackaged/main/default/objects/Billing__c/fields/Effective_Date_for_PSM__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_for_PSM__c</fullName>
    <formula>Contract__r.Effective_Date_for_PSM__c</formula>
    <label>Effective Date for PSM</label>
    <type>Date</type>
</CustomField>