unpackaged/main/default/objects/Billing__c/fields/Email_AccountsPayable__c.field-meta.xml
<CustomField>
    <fullName>Email_AccountsPayable__c</fullName>
    <label>Accounts Payable Email</label>
    <type>Email</type>
</CustomField>