unpackaged/main/default/objects/Billing__c/fields/Email_BusinessContact__c.field-meta.xml
<CustomField>
    <fullName>Email_BusinessContact__c</fullName>
    <label>Business Contact Email</label>
    <type>Email</type>
</CustomField>