unpackaged/main/default/objects/Billing__c/fields/Emails_to_Receive_Monthly_Reports__c.field-meta.xml
<CustomField>
    <fullName>Emails_to_Receive_Monthly_Reports__c</fullName>
    <formula>Account__r.Emails_to_Receive_Monthly_Reports__c</formula>
    <label>Emails to Receive Monthly Reports</label>
    <type>Text</type>
</CustomField>