unpackaged/main/default/objects/Billing__c/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <formula>Contract__r.Go_Live_Date__c</formula>
    <label>Go-Live Date</label>
    <type>Date</type>
</CustomField>