unpackaged/main/default/objects/Billing__c/fields/Health_Plan_Account_Executive_Email__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Account_Executive_Email__c</fullName>
    <formula>Account__r.Health_Plan_Account_Executive__r.Email</formula>
    <label>Health Plan Account Executive Email</label>
    <type>Text</type>
</CustomField>