unpackaged/main/default/objects/Billing__c/fields/Health_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Name__c</fullName>
    <formula>TEXT(Contract__r.Health_Plan_Name__c)</formula>
    <label>Health Plan Name</label>
    <type>Text</type>
</CustomField>