unpackaged/main/default/objects/Billing__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <formula>Contract__r.Payment_Terms__c</formula>
    <label>Payment Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>