unpackaged/main/default/objects/Billing__c/fields/Phone_AP__c.field-meta.xml
<CustomField>
    <fullName>Phone_AP__c</fullName>
    <description>Accounts Payable Phone</description>
    <inlineHelpText>Accounts Payable Phone</inlineHelpText>
    <label>Accounts Payable Phone</label>
    <type>Phone</type>
</CustomField>