unpackaged/main/default/objects/Billing__c/fields/Phone_BC__c.field-meta.xml
<CustomField>
    <fullName>Phone_BC__c</fullName>
    <description>Business Contact Phone</description>
    <inlineHelpText>Business Contact Phone</inlineHelpText>
    <label>Business Contact Phone</label>
    <type>Phone</type>
</CustomField>