unpackaged/main/default/objects/Billing__c/fields/Program_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee_Percent__c</fullName>
    <formula>Contract__r.Program_Fee__c</formula>
    <label>Program Fee (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>