unpackaged/main/default/objects/Billing__c/fields/Program_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Termination_Date__c</fullName>
    <formula>Contract__r.Program_Termination_Date__c</formula>
    <label>Program Termination Date</label>
    <type>Date</type>
</CustomField>