unpackaged/main/default/objects/Billing__c/fields/PrudentRx_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>PrudentRx_Account_Manager__c</fullName>
    <description>PrudentRx Account Manager</description>
    <formula>Account__r.PRx_Account_Manager__r.FirstName &amp; &#39; &#39; &amp; Account__r.PRx_Account_Manager__r.LastName</formula>
    <inlineHelpText>PrudentRx Account Manager</inlineHelpText>
    <label>PrudentRx Account Manager</label>
    <type>Text</type>
</CustomField>