unpackaged/main/default/objects/Billing__c/fields/PrudentRx_Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>PrudentRx_Account_Manager_Email__c</fullName>
    <description>PrudentRx Account Manager Email</description>
    <formula>Account__r.PRx_AM_Email__c</formula>
    <inlineHelpText>PrudentRx Account Manager Email</inlineHelpText>
    <label>PrudentRx Account Manager Email</label>
    <type>Text</type>
</CustomField>